[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monte-carlo-forecast-uncertainty"
version = "0.1.0"
description = "A project to demonstrate yearly Monte Carlo uncertainty quantification from monthly forecasts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darts>=0.43.0",
    "ipykernel>=7.2.0",
    "sktime>=0.40.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/conformal_monte_carlo"]

